style.css
body{
    display:flex;
    align-items: center;
    justify-content: center;
    min-height: 100vh;
}


.calculator{
    display: flex;
    flex-direction: column;
    justify-content:space-around;
    align-items: center;
    width:100px;
    height: 160px;
    padding: 10px;
    border: 2px solid hotpink;
    border-radius: 25px;
    background-image: linear-gradient(to bottom right, rgb(101, 101, 197), rgb(191, 128, 216), rgb(101, 101, 197), rgb(219, 103, 180));
}

.screen{
    font-size: 10px;
    box-sizing: border-box;
    border-radius: 25px;
    border: 2px solid rgb(245, 157, 199);
    width: 100%;
    height: 30px;
    background-color: rgb(247, 211, 244);
}

.calculation, .result{
    font-style: sans-serif rgb(243, 131, 150);
    margin: 3px;
}

.result{
    margin: 3;
    text-align: end;
}

.keyboard{
    width: 100px;
    height: 100px;
    display:flex;
    align-items: center;
    flex-wrap: wrap;
    flex: none;
}

button{
    box-sizing: border-box;
    flex: 1 0 0px;
    border-radius: 10px;
    background-image: linear-gradient(to bottom right, rgb(101, 101, 197), rgb(191, 128, 216));
    border: solid 1px pink;
    margin: 1px;
    color: pink;
}

.equals, .clear{
    flex: 4 0 0px;
}

